<resources>
    <string name="app_name">行動保養APP</string>
    <string name="select_file">設備文件檢視</string>
    <string name="login_account">帳號</string>
    <string name="login_password">密碼</string>
    <string name="login_btn_login">登入</string>
    <string name="login_account_hint">請輸入帳號</string>
    <string name="login_password_hint">請輸入密碼</string>
    <string name="open_camera_for_capture">拍照</string>
    <string name="open_camera_for_video">錄影</string>
    <string name="updata_video">錄影上傳</string>
    <string name="updata_picture">拍照上傳</string>
    <string name="device">設備ID:</string>
    <string name="fetch">擷取</string>
    <string name="device_company">公 &#160;&#160;&#160;&#160;&#160;&#160;&#160;司:&#160;</string>
    <string name="job_site">作業廠處:&#160;</string>
    <string name="production_plant">生 &#160;產 &#160;廠:&#160;</string>
    <string name="route_code">路線代號:&#160;</string>
    <string name="route_name">路線名稱:&#160;</string>
    <string name="device_category">設備類別:&#160;</string>
    <string name="device_number">設備:&#160;</string>
    <string name="device_name">設備名稱:&#160;</string>
    <string name="create">建立</string>
    <string name="live_data">現場資料</string>
    <string name="data_upload">資料上傳</string>
    <string name="record_date">紀錄日期:&#160;</string>
    <string name="maintenance_plant">保 &#160;養 &#160;廠:&#160;</string>
    <string name="file">檔 &#160;&#160;&#160;&#160;&#160;&#160;&#160;案:&#160;</string>
    <string name="browse">瀏覽</string>
    <string name="upload">OK</string>
    <string name="upload_person">上傳人員:&#160;</string>
    <string name="on_upload_image">照片上傳中</string>
    <string name="on_upload_vedio">影片上傳中</string>
    <string name="loading">讀取中</string>
    <string name="check">確定</string>
    <string name="saving">儲存中</string>
    <string name="choose_device">請選取設備</string>
    <string name="no_device">無設備</string>
    <string name="chosse_camera_question">是否確定選擇這些照片?</string>
    <string name="chosse_video_question">是否確定選擇這些影片?</string>
    <string name="no_camera_data">此照片無對應資料</string>
    <string name="no_video_data">此影片無對應資料</string>
    <!--chooseDevice部分-->
    <string name="add_device_error_on_choose_device_activity">新增失敗</string>
    <string name="on_no_set_recordSubject">沒有輸入主旨</string>
    <string name="no_device_le">沒有設備類別名稱，無法使用上傳功能</string>
    <string name="upload_success">上傳完成</string>
    <string name="upload_false_plz_upload_again">上傳失敗，此檔案無法上傳，請重新錄影並在上傳</string>
    <string name="upload_false">上傳失敗，請重新上傳</string>
    <string name="upload_false_linkfailed">上傳失敗，連結超時</string>
    <string name="upload_false_bigdata">上傳失敗，檔案過大 </string>
    <string name="upload_false_internetfailed">上傳失敗請確認網路問題</string>
    <string name="input_dialog">主旨輸入: </string>
    <string name="auto_login">自動登入中</string>
    <string name="auto_login_false">自動登入失敗</string>
    <string name="login">登入中</string>
    <string name="login_input_false">登入失敗，帳號密碼輸入格式不符合</string>
    <string name="login_false">登入失敗</string>
    <string name="login_false_internet">登入失敗，請檢查網路狀況</string>
    <string name="g_upload_ok">個上傳成功</string>
    <string name="g_nodata">無資料</string>
    <string name="search_not_ok">查詢資料失敗，請重試或檢查網路狀態，時間為 : </string>
    <string name="search_not_ok_nt">查詢資料失敗，請重試或檢查網路狀態</string>
    <string name="device_nodata">設備類別查無資料，時間為 : </string>
    <string name="device_no">設備類別查無資料</string>
    <!--api使用部分-->
    <string name="api_base_url">https://cloud.fpcetg.com.tw/FPC/API/MTN/API_MTN/MTN/</string>
    <string name="api_InsInfo_url">https://cloud.fpcetg.com.tw/FPC/WEB/MTN/MTN_EQPT/MTN_InsInfo.aspx</string>
    <string name="api_erp_url"> https://cloud.fpcetg.com.tw/FPC/API/MTN/API_MTN/LB_MTN/</string>
    <string name="api_on_getCO">SearchCO</string>
    <string name="api_on_getMNTFCT">SearchMNTFCT</string>
    <string name="api_on_getPMFCT">SearchPMFCT</string>
    <string name="api_on_getEQKD">SearchEQKD</string>
    <string name="api_on_getEQNO">SearchEQNO</string>
    <string name="api_on_Login">AccessToken</string>
    <string name="api_on_DisposableToken">DisposableToken</string>
    <string name="api_on_InsInfo">InsInfo</string>
    <string name="api_on_AddChkInfo">AddChkInfo</string>
    <!--addDevice部分-->
    <string name="get_pmfct_error_no_data">保養廠無資料</string>
    <string name="get_eqkd_error_no_data">設備類別查無資料</string>
    <string name="get_eqno_error_no_data">設備查無資料</string>
    <string name="add_device_no_maintenance_plant_error">請選擇保養廠</string>
    <string name="add_device_no_company_error">請選擇公司</string>
    <string name="add_device_no_production_plant_error">請選擇生產廠</string>
    <string name="add_device_no_device_categry_error">請選擇設備類別</string>
    <string name="add_device_no_data_maintenance_plant">保養廠還未填寫</string>
    <string name="add_device_no_data_company">公司還未填寫</string>
    <string name="add_device_no_data_production_plant">生產廠還未填寫</string>
    <string name="add_device_no_data_device_categry">設備類別還未填寫</string>
    <string name="add_device_no_data_device_id">設備還未填寫</string>
    <string name="add_device_no_data_keynote">主旨說明還未填寫</string>
    <string name="add_device_no_data_file">檔案還未選擇</string>

    <string name="add_device_error">查詢資料失敗，請重試或檢查網路狀態。</string>
    <string name="auto_login_error_message">巡檢取得不到資料，無法自動登入</string>
    <string name="get_inspection_data_error_message">無法取得巡檢資料</string>
    <string name="upload_device_data_is_null">無設備資料，無法上傳檔案</string>


</resources>
