<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@color/greenhulk"
    >

<LinearLayout
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/titleblue"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp" />
</LinearLayout>

<RelativeLayout
    android:id="@+id/linear2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/linear1"
    android:gravity="center|bottom"
    android:layout_marginTop="30dp"
    >

    <TextView
        android:id="@+id/text_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/device"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_device_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXXX-XXX-XX"
        android:layout_toRightOf="@id/text_device"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        />
    <Button
        android:id="@+id/btnFetchDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_activity_main_btn"
        android:text="@string/fetch" />
</RelativeLayout>

<Button
    android:id="@+id/btnGetFile"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/linear2"
    android:text="@string/select_file"
    android:layout_centerHorizontal="true"
    android:background="@drawable/bg_activity_main_btn"
    android:layout_marginTop="15dp"
    />

<LinearLayout
    android:id="@+id/linear3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/btnGetFile"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginTop="30dp"

    >

    <Button
        android:id="@+id/btnRecordVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_camera_for_video"
        android:background="@drawable/bg_activity_main_btn"
        />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_camera_for_capture"
        android:background="@drawable/bg_activity_main_btn"
        android:layout_marginLeft="30dp"
        />
</LinearLayout>

<LinearLayout
    android:id="@+id/linear4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/linear3"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginTop="30dp"
    >

    <Button
        android:id="@+id/btnGetVideoFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updata_video"
        android:background="@drawable/bg_activity_main_btn"
        />
    <Button
        android:id="@+id/btnGetImageFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updata_picture"
        android:background="@drawable/bg_activity_main_btn"
        android:layout_marginLeft="30dp"
        />
</LinearLayout>


<ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:visibility="gone"
    />

<VideoView
    android:id="@+id/videoView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:visibility="gone" />

</RelativeLayout>