<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenhulk"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleblue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/u17" />

        <EditText
            android:id="@+id/edit_account"
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:hint="@string/login_accoutn_hint"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/linear_account"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/u18" />
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:maxLines="1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login_password_hint"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login_btn_login"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linear_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_activity_main_btn"

        />
</RelativeLayout>